--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,8 +5,8 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/anaconda/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: 333
+  git_url: https://github.com/anaconda/{{ name }}.git
+  git_tag: {{ version }}
 
 build:
   number: 0
@@ -14,6 +14,8 @@ build:
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation --ignore-installed
 
 requirements:
+  build:
+    git  # [not win]
   host:
     - python
     - pip
