--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
 
 source:
   git_url: https://github.com/anaconda/{{ name }}.git
-  git_tag: {{ version }}
+  git_tag: v{{ version }}
 
 build:
   number: 0
